[package]
name = "tlsn-example"
version = "0.1.0"
edition = "2024"

[dependencies]
tlsn-common = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.10", version = "0.1.0-alpha.10" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.10", version = "0.1.0-alpha.10" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.10", version = "0.1.0-alpha.10" }
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.10", version = "0.1.0-alpha.10" }
tls-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.10", version = "0.1.0-alpha.10", package = "tlsn-tls-core" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.12", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
